Fix left arrow being clipped in AP runtime.

--- a/css/segments.css
+++ b/css/segments.css
@@ -201,7 +201,6 @@ body.blues-only #bump-stage-overlay {
   text-indent: 100%;
   top: 1em;
   white-space: nowrap;
-  width: 4%;
 }
 
 #left.disabled {
